test/fail/curly.js
/* eslint-disable no-unused-vars -- We're only testing ESLint rules. */

// FAIL: curly

if (console)
  console.log('hello')
